  or deleted (within jEdit)
- When a file is added or removed, the VFS browser tree view now only
  updates the branch where the file is located, not the entire tree
- The VFS browser now displays an error message if you attempt to execute
  more than one request simultaneously. Because the browser was not
  designed with this in mind, it would cause strange problems
- doc/NEWS.txt written

+ Bug Fixes

- When using FTP URLs which don't specify the user name (for example,
  ftp://hostname) jEdit would prompt for the user name/password for
  every VFS operation
- FtpVFS no longer throws NullPointerExceptions when an error occurs
  while connecting to a server

* Version 2.6pre3

+ New Features

- Window docking added to the core. This allows plugins and other windows
  to be 'docked' into views. By default, all dockable windows are shown
  in their own frames. This can be changed in Utilities->Global Options->
  Docking. This obsoletes the PluginHolder plugin.

+ Enhancements

- Previously, buffer closing and search & replace would block the GUI
  until all pending I/O was complete. Now, these commands only do it if
  it is really necessary
  the buffer _being closed_ is currently being loaded or saved
- If the default edit mode is not 'text', *.txt files are now opened in
  text mode anyway
- jEdit now remembers all FTP passwords until it is quit. To force it
  to forget passwords while it is still running, invoke Utilities->Forget
  Remote Passwords
- More VFS code cleanups
- Documentation updates

+ Bug Fixes

- Double-clicking on a directory in the 'save as' dialog box did not have
  the desired effect (since 2.6pre2)
- On some systems, File.list(), for whatever reason, returns files in the
  list, which return false when exists() is called on them. This caused NPE's
  (since 2.6pre2)
- The VFS browser would throw 'VFS session in use' errors after the
  Global Options dialog box was closed (since 2.6pre2)